Fix horizontal wrapper on mobile

--- a/assets/css/content.css
+++ b/assets/css/content.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: row;
     gap: 8px;
+    align-items: flex-start;
 }
 
 .primary-action {
@@ -21,4 +22,10 @@
     padding: 0.8em;
     text-decoration-line: unset;
     border-radius: 4px;
+}
+
+@media screen and (max-width: 768px) {
+    .horizontal-wrapper {
+        flex-direction: column;
+    }
 }
